--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 
-    <title>Portfolio Website - CodeCraftedWeb</title>
+    <title>Portfolio Website - Ajinkya_Pachade</title>
 </head>
 <body>
     <!--===== HEADER =====-->
