--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Ajinkya</span><br>Software Developer</h1>
 
                 <a href="#contact" class="button">Contact</a>
+                <a href="https://ajinkyapachade.github.io/Portfolio/" class="button">Resume</a>
             </div>
 
             <div class="home__social">
