--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="home__data">
                 <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Ajinkya</span><br>Software Developer</h1>
 
-                <a href="#contact" class="button">Contact</a>
+                <a href="#contact" class="button">Contact</a> &ensp; &ensp;
                 <a href="https://ajinkyapachade.github.io/Portfolio/" class="button">Resume</a>
             </div>
 
