--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Ajinkya</span><br>Software Developer</h1>
 
                 <a href="#contact" class="button">Contact</a> &ensp; 
-                <a href="https://ajinkyapachade.github.io/Portfolio/" class="button">Resume</a>
+                <a href="https://drive.google.com/file/d/18p3wIJVbUtHl-CWp6X_pZlLRp4RwXuZ-/view?usp=sharing" class="button">Resume</a>
             </div>
 
             <div class="home__social">
