--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 
-    <title>Portfolio Website - Ajinkya_Pachade</title>
+    <title <a href="https://www.flaticon.com/free-icons/applicant" title="applicant icons">Applicant icons created by Prosymbols Premium - Flaticon</a> >Portfolio Website - Ajinkya_Pachade</title>
+    
 </head>
 <body>
     <!--===== HEADER =====-->
