--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 
-    <title img width="80" height="80" src="https://img.icons8.com/dotty/80/portfolio.png" alt="portfolio"/>Portfolio Website - Ajinkya_Pachade</title>
+    <title>Portfolio Website - Ajinkya_Pachade</title>
     <link rel="icon" type="image/png" href="resume-icon.png">
     
 </head>
