--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
     <title>Portfolio Website - Ajinkya_Pachade</title>
-    <link rel="icon" type="image/png" href="resume-icon.png">
+    <link rel="icon" type="image/png" href="icons8-portfolio-80.png">
     
 </head>
 <body>
