--- a/index.html
+++ b/index.html
@@ -297,13 +297,15 @@ Pvt. Ltd. and InnoByte Servises Pvt. Ltd. I am eager to contribute my skills to 
     <div class="project__container">
         <!-- Project 1 -->
         <div class="project__item">
-            <center><h3 class="project__title">Online Banking System</h3></center>
+            <center><h3 class="project__title">Personal Finance System</h3></center>
             <ul class="project__details">
-                <li>• Developed web-based Bank Management System (BMS) to streamline payments for financial institutions and fiscal services</li>
-                <li>• Implemented analytical tools in BMS, enabling review and approval of budgets, compensation, and outflows</li>
-                <li>• Designed user-friendly interfaces using HTML, CSS, JavaScript, enhancing usability and reducing task completion time by 20%</li>
-                <li>• Built back-end systems with Python Django and MariaDB, ensuring seamless account management functionalities</li>
-                <li>• Optimized functionalities for deposits, withdrawals, and transfers, improving financial transaction efficiency by 25%</li>
+                <li>• Developed a full-stack Personal Finance System (PFS) to help individuals and small businesses track income, manage expenses, and monitor budgets 
+                      in real-time</li>
+                <li>• Implemented CRUD operations for income and expenses, allowing users to securely deposit, update, and delete financial entries with robust 
+                      validations. Designed user-friendly interfaces using HTML, CSS, JavaScript, enhancing usability and reducing task completion time by 20%</li>
+                <li>• Integrated visual analytics and dashboards, enabling users to view financial summaries, track savings goals, and generate monthly reports</li>
+                <li>• Designed a responsive front-end interface using HTML, CSS, and JavaScript, improving user experience and reducing input time by 30%</li>
+                <li>• Back-end with  MariaDB, ensuring secure authentication, session management, and persistent data storage</li>
             </ul>
         </div>
 
