--- a/index.html
+++ b/index.html
@@ -297,7 +297,8 @@ Pvt. Ltd. and InnoByte Servises Pvt. Ltd. I am eager to contribute my skills to 
     <div class="project__container">
         <!-- Project 1 -->
         <div class="project__item">
-            <center><h3 class="project__title">Personal Finance System</h3></center>
+            <center><h3 class="project__title">Personal Finance System <a href="https://github.com/AjinkyaPachade/Finance_Application"><img src="github.jpg" width="35px" height="35px"></a>
+</h3></center>
             <ul class="project__details">
                 <li>• Developed a full-stack Personal Finance System (PFS) to help individuals and small businesses track income, manage expenses, and monitor budgets 
                       in real-time</li>
