--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="home__social">
                 <a href="https://www.linkedin.com/in/ajinkya-pachade-bb33b31a5" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
                 <a href="" class="home__social-icon"><i class='bx bxl-behance' ></i></a>
-                <a href="" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                <a href="https://github.com/AjinkyaPachade/Finance_Application" class="home__social-icon"><i class='bx bxl-github' ></i></a>
             </div>
 
             <div class="home__img">
