--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <div class="home__social">
                 <a href="https://www.linkedin.com/in/ajinkya-pachade-bb33b31a5" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                <a href="" class="home__social-icon"><i class=<i class='bx bxl-gfg'></i></a>
+                <a href="" class="home__social-icon"><img src="https://cdn.simpleicons.org/geeksforgeeks/2F8D46" alt="GeeksforGeeks" width="24px"></i></a>
                 <a href="https://github.com/AjinkyaPachade/Finance_Application" class="home__social-icon"><i class='bx bxl-github' ></i></a>
             </div>
 
