--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
 
             <div class="home__social">
-                <a href="https://www.linkedin.com/in/ajinkya-pachade-bb33b31a5" class="home__social-icon"><img src="https://cdn.simpleicons.org/linkedin/0A66C2" alt="LinkedIn" width="24px"></a>
+                <a href="https://www.linkedin.com/in/ajinkya-pachade-bb33b31a5" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://www.geeksforgeeks.org/user/pachadeauld8/" class="home__social-icon"><img src="https://cdn.simpleicons.org/geeksforgeeks/000000" alt="GeeksforGeeks" width="24px"></a>
                 <a href="https://github.com/AjinkyaPachade/Finance_Application" class="home__social-icon"><i class='bx bxl-github' ></i></a>
             </div>
